# set-algebra

./: .gitignore  Contributing.md  HISTORY.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.py
set_algebra/: __init__.py  endpoint.py  infinity.py  interval.py  parser.py  set_.py
src/set_algebra/: __init__.py  infinity.py  parser.py  set_.py
src/set_algebra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_README.py  test_endpoint.py  test_inf.py  test_infinity.py  test_interval.py  test_neg_inf.py  test_set.py  test_set_add.py  test_set_and.py  test_set_isdisjoint.py  test_set_remove.py  test_set_search.py  test_set_xor.py  test_uiset.py  test_uiset_add.py  test_uiset_and.py  test_uiset_isdisjoint.py  test_uiset_remove.py  test_uiset_search.py  test_uiset_xor.py
uiset/: __init__.py  endpoint.py  interval.py  parser.py  set_.py  uiset.py
